force-app/main/default/objects/Location_Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Landmark near your residence</description>
    <inlineHelpText>Enter any landmark near you</inlineHelpText>
    <label>Landmark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>