force-app/main/default/objects/Location_Address_Book__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal Code of the residence.</description>
    <inlineHelpText>Enter the postal code</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>